S3 service with bucket management, file operations, and URL generation

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,25 @@ services:
       timeout: 5s
       retries: 5
 
+  localstack:
+    image: localstack/localstack:latest
+    container_name: toolsharer-localstack
+    ports:
+      - "4566:4566"  # LocalStack Gateway
+    environment:
+      - SERVICES=s3
+      - DEBUG=1
+      - PERSISTENCE=1
+      - AWS_DEFAULT_REGION=eu-north-1
+    volumes:
+      - localstack_data:/var/lib/localstack
+      - /var/run/docker.sock:/var/run/docker.sock
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:4566/_localstack/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
   backend:
     build: ./backend
     container_name: toolsharer-backend
@@ -27,12 +46,22 @@ services:
       - DATABASE_URL=postgresql+psycopg://toolsharer:toolsharer_dev@db:5432/toolsharer
       - APP_NAME=ToolSharer
       - DEV_AUTH_ENABLED=True
+      - AWS_REGION=eu-north-1
+      - AWS_ACCESS_KEY_ID=test
+      - AWS_SECRET_ACCESS_KEY=test
+      - S3_ENDPOINT_URL=http://localstack:4566
+      - S3_PUBLIC_ENDPOINT_URL=http://localhost:4566
+      - S3_BUCKET_NAME=toolsharer-icons
     depends_on:
       db:
         condition: service_healthy
+      localstack:
+        condition: service_healthy
     volumes:
       - ./backend:/app
+      - ./frontend:/frontend
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
 
 volumes:
   postgres_data:
+  localstack_data:
