--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,7 @@ alembic==1.17.2
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.0
+boto3>=1.34.0
 click==8.3.1
 colorama==0.4.6
 email-validator>=2.0.0
