--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     ports:
       - "4566:4566"  # LocalStack Gateway
     environment:
-      - SERVICES=s3,lambda
+      - SERVICES=s3,lambda,ses
       - DEBUG=1
       - PERSISTENCE=1
       - AWS_DEFAULT_REGION=eu-north-1
@@ -54,6 +54,8 @@ services:
       - S3_ENDPOINT_URL=http://localstack:4566
       - S3_PUBLIC_ENDPOINT_URL=http://localhost:4566
       - S3_BUCKET_NAME=toolsharer-icons
+      - SES_ENDPOINT_URL=http://localstack:4566
+      - SES_SENDER_EMAIL=noreply@toolsharer.local
     depends_on:
       db:
         condition: service_healthy
